0032353: Modeling Data - Missing definition of ProjLib_ProjectOnSurface::Load()