src/ProjLib/ProjLib_ProjectOnSurface.hxx
@@ -29,38 +29,26 @@ public:
 
   DEFINE_STANDARD_ALLOC
 
-  
   //! Create an empty projector.
   Standard_EXPORT ProjLib_ProjectOnSurface();
-  
+
   //! Create a projector normally to the surface <S>.
   Standard_EXPORT ProjLib_ProjectOnSurface(const Handle(Adaptor3d_Surface)& S);
-  
+
   Standard_EXPORT virtual ~ProjLib_ProjectOnSurface();
-  
+
   //! Set the Surface to <S>.
   //! To compute the projection, you have to Load the Curve.
   Standard_EXPORT void Load (const Handle(Adaptor3d_Surface)& S);
-  
+
   //! Compute the projection of the curve <C> on the Surface.
   Standard_EXPORT void Load (const Handle(Adaptor3d_Curve)& C, const Standard_Real Tolerance);
-  
-  Standard_EXPORT Standard_Boolean IsDone() const;
-  
+
+  Standard_Boolean IsDone() const { return myIsDone; }
+
   Standard_EXPORT Handle(Geom_BSplineCurve) BSpline() const;
 
-
-
-
-protected:
-
-
-
-
-
 private:
-
-
 
   Handle(Adaptor3d_Curve) myCurve;
   Handle(Adaptor3d_Surface) mySurface;
@@ -68,13 +56,6 @@ private:
   Standard_Boolean myIsDone;
   Handle(Geom_BSplineCurve) myResult;
 
-
 };
-
-
-
-
-
-
 
 #endif // _ProjLib_ProjectOnSurface_HeaderFile
